# Repressurizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  build-windows.ps1  build.sh  index.html  mkdocs.yml  package.json  playwright.config.ts  playwright.docs.config.ts  requirements-docs.txt  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release-contributors.json  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hltb_matching.yml  install_release.yml  steam_family.yml  steam_metadata.yml
.github/workflows/: ci.yml  docs.yml  labels.yml  preview.yml  publish-integration.yml  publish-rust-integration.yml  release.yml  tag-release.yml  virustotal-check.yml
docs/: README.md  automation-export.md  cache-and-network.md  cli.md  index.md  localization.md  privacy.md  steam-family.md
docs/assets/: repressurizer-demo.webm
docs/development/: architecture.md  index.md  releases.md  setup.md  testing.md
docs/getting-started/: first-run.md  index.md  installation.md  safe-first-save.md  updates.md
docs/integrations/: index.md  integration-package-release.md  receiver-example.md  repressurizer-snapshot-v1.md  rust-integration-crate.md
docs/recipes/: index.md  (+3 more)
scripts/: build-sam-bridge.ts  docs-audit.ts  generate-changelog.ts  i18n-check.ts  i18n-status.ts  preview-release-notes.ts  release-notes.test.ts  release-notes.ts  tauri-preview.ts
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.preview.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_channel.rs  app_data.rs  automation.rs  hltb.rs  http_policy.rs  lib.rs  main.rs  runtime_cache.rs  tests.rs
src-tauri/src/automation/: snapshot.rs
src-tauri/src/categorizer/: commands.rs  genre.rs  hours.rs  metadata.rs  mod.rs  score.rs  tags.rs  year.rs
src-tauri/src/fixtures/: depressurizer-database-snapshot.json
src-tauri/src/steam/: api.rs  collections.rs  depressurizer_database.rs  depressurizer_profile.rs  detector.rs  legacy_sharedconfig.rs  local_library.rs  mod.rs  sam.rs  shortcuts.rs
src-tauri/src/steam/api/: achievements.rs  details.rs  family.rs  library.rs  mod.rs  profile.rs  reviews.rs  types.rs  utils.rs
src-tauri/src/steam/collections/: leveldb.rs  tests.rs
src-tauri/src/steam/sam/: backup.rs  probe.rs  schema.rs  state.rs  tests.rs  windows_steam.rs
(+237 files in other folders)
