[package]
name = "repressurizer"
version = "0.2.0"
description = "Steam Library Manager"
authors = ["you"]
edition = "2021"
default-run = "repressurizer"

[lib]
name = "repressurizer_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
base64 = "0.22"
chrono = "0.4"
dirs = "6"
rusty-leveldb = "4.0.1"

[dev-dependencies]
wiremock = "0.6"
