[package]
name = "repressurizer"
version = "0.4.11"
description = "Steam Library Manager"
authors = ["you"]
edition = "2021"
default-run = "repressurizer"

[lib]
name = "repressurizer_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "socks"] }
repressurizer-integration = { path = "../packages/rust" }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
base64 = "0.22"
chrono = "0.4"
dirs = "6"
rusty-leveldb = "4.0.1"
libloading = "0.8"
roxmltree = "0.20"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
zip = { version = "4.6.1", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
windows-core = "0.61.2"

[dev-dependencies]
wiremock = "0.6"
